--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="edit_delete_button">Delete</string>
     <string name="edit_share_button">Save/Share</string>
     <string name="edit_note_text_title">Edit prayerNote:</string>
+    <string name="main_list_empty">No prayerNotes saved.  Create a new one!</string>
+    <string name="unknown_date">Unknown</string>
 </resources>
