- ImageView added to note-edit page and onClickListener set for it. - SD card image added to project that AVD emulator can be set to use in order populate image gallery with test images.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="edit_delete_button">Delete</string>
     <string name="edit_share_button">Save/Share</string>
     <string name="edit_note_text_title">Edit prayerNote:</string>
+    <string name="edit_note_img_title">Attach an image:</string>
     <string name="main_list_empty">No prayerNotes saved.  Create a new one!</string>
     <string name="unknown_date">Unknown</string>
     <string name="context_menu_delete">Delete prayerNote</string>
