--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="main_list_empty">No prayerNotes saved.  Create a new one!</string>
     <string name="unknown_date">Unknown</string>
     <string name="context_menu_delete">Delete prayerNote</string>
+    <string name="coming_soon">Coming Soon!</string>
 </resources>
