Delete Note functionality - user can delete note from the edit screen.  shows different text on button depending on if note is new or not. - alert dialog hooked up to get user confirmation for delete action (available on both delete button on edit screen and from context menu delete option on the main list screen)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="unknown_date">Unknown</string>
     <string name="context_menu_delete">Delete prayerNote</string>
     <string name="coming_soon">Coming Soon!</string>
+    <string name="dialog_delete_confirm">Are you sure you want to delete this prayerNote?</string>
+    <string name="dialog_yes">Yes</string>
+    <string name="dialog_no">No</string>
 </resources>
