--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="dialog_delete_confirm">Are you sure you want to delete this prayerNote?</string>
     <string name="dialog_yes">Yes</string>
     <string name="dialog_no">No</string>
+    <string name="dialog_share_title">Share via:</string>
     <string name="checkbox_prayed_for_text">Mark as prayed for</string>
     <string name="checkbox_prayed_success_text">prayerNote prayed for!</string>
+    <string name="dialog_list_email">Email</string>
+    <string name="dialog_list_gmail">Gmail</string>
 </resources>
