String change from "Save/Share" to "Share"

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="edit_save_button">Save</string>
     <string name="edit_discard_button">Discard</string>
     <string name="edit_delete_button">Delete</string>
-    <string name="edit_share_button">Save/Share</string>
+    <string name="edit_share_button">Share</string>
     <string name="edit_note_text_title">Edit prayerNote:</string>
     <string name="edit_note_img_title">Attach an image:</string>
     <string name="context_menu_delete">Delete</string>
