Context menu addition and image-only check - new "open" option in main list's context menu - Intent in startGalleryActivity() modified to only accept image files; so that video files can't be selected

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="edit_share_button">Share</string>
     <string name="edit_note_text_title">Edit prayerNote:</string>
     <string name="edit_note_img_title">Attach an image:</string>
+    <string name="context_menu_open">Open</string>
     <string name="context_menu_delete">Delete</string>
     <string name="context_menu_prayed">Mark as prayed for</string>
     <string name="context_prayed_success">prayerNote prayed for!</string>
