AlarmManager and Notifications implemented - receiver created to handle notifications - setting an alarm and saving the note will set an alarm with AlarmManger and interface with NotificationManager to create a notification in the status bar

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="dialog_list_email">Email</string>
     <string name="dialog_list_gmail">Gmail</string>
     <string name="error_activity_not_found">Error. Application not available.</string>
+    <string name="ticker_title">prayerNote Reminder</string>
+    <string name="ticker_content">Prayer from %1$s</string>
 </resources>
