--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">prayerNotes</string>
-    <string name="search_hint">Search prayerNotes</string>
-    <string name="last_prayed_for">Last prayed for:\u0020</string>
+    <string name="checkbox_prayed_for_text">Mark as prayed for</string>
+    <string name="checkbox_prayed_success_text">prayerNote prayed for!</string>
+    <string name="coming_soon">Coming Soon!</string>
+    <string name="context_menu_delete">Delete</string>
+    <string name="context_menu_open">Open</string>
+    <string name="context_menu_prayed">Mark as prayed for</string>
+    <string name="context_prayed_success">prayerNote prayed for!</string>
     <string name="date_created">Date Created:\u0020</string>
-    <string name="date_unknown">Unknown</string>
     <string name="date_never">Never</string>
-    <string name="new_note_title">Create a prayerNote</string>
-    <string name="main_list_empty">No prayerNotes saved.  Create a new one!</string>
+    <string name="date_unknown">Unknown</string>
+    <string name="dialog_alarm_set_date">Set Date</string>
+    <string name="dialog_alarm_set_time">Set Time</string>
+    <string name="dialog_alarm_title">Set a Reminder</string>
+    <string name="dialog_cancel_edit">Are you sure you want to abandon all changes?</string>
+    <string name="dialog_delete_confirm">Are you sure you want to delete this prayerNote?</string>
+    <string name="dialog_list_email">Email</string>
+    <string name="dialog_list_gmail">Gmail</string>
+    <string name="dialog_share_title">Share via:</string>
+    <string name="dialog_yes">Yes</string>
+    <string name="dialog_no">No</string>
+    <string name="dialog_ok">Ok</string>
+    <string name="dialog_cancel">Cancel</string>
     <string name="edit_alarm_button">Set a Reminder</string>
     <string name="edit_note_title">Edit a prayerNote</string>
     <string name="edit_save_button">Save</string>
@@ -17,26 +32,12 @@
     <string name="edit_note_text_title">Edit prayerNote:</string>
     <string name="edit_note_img_title">Attach an image:</string>
     <string name="edit_menu_cancel">Cancel</string>
-    <string name="context_menu_open">Open</string>
-    <string name="context_menu_delete">Delete</string>
-    <string name="context_menu_prayed">Mark as prayed for</string>
-    <string name="context_prayed_success">prayerNote prayed for!</string>
-    <string name="coming_soon">Coming Soon!</string>
-    <string name="dialog_delete_confirm">Are you sure you want to delete this prayerNote?</string>
-    <string name="dialog_cancel_edit">Are you sure you want to abandon all changes?</string>
-    <string name="dialog_alarm_title">Set a Reminder</string>
-    <string name="dialog_alarm_set_date">Set Date</string>
-    <string name="dialog_alarm_set_time">Set Time</string>
-    <string name="dialog_yes">Yes</string>
-    <string name="dialog_no">No</string>
-    <string name="dialog_ok">Ok</string>
-    <string name="dialog_cancel">Cancel</string>
-    <string name="dialog_share_title">Share via:</string>
-    <string name="checkbox_prayed_for_text">Mark as prayed for</string>
-    <string name="checkbox_prayed_success_text">prayerNote prayed for!</string>
-    <string name="dialog_list_email">Email</string>
-    <string name="dialog_list_gmail">Gmail</string>
     <string name="error_activity_not_found">Error. Application not available.</string>
+    <string name="last_prayed_for">Last prayed for:\u0020</string>
+    <string name="main_list_empty">No prayerNotes saved.  Create a new one!</string>
+    <string name="new_note_title">Create a prayerNote</string>
+    <string name="search_hint">Search prayerNotes</string>
+    <string name="search_empty">No matching notes found.</string>
     <string name="ticker_title">prayerNote Reminder</string>
     <string name="ticker_content">Prayer from %1$s</string>
 </resources>
